--- a/core/templates/home.html
+++ b/core/templates/home.html
@@ -3,11 +3,7 @@
 {% block title %}Home{% endblock %}
 
 {% block content %}
-<h1>Welcome to the Home Page</h1>
-<p>This is the main content of the home page.</p>
-
-
-
+<h1>Welcome to everybody</h1>
 {% endblock %}
 
 
