--- a/main/templates/base.html
+++ b/main/templates/base.html
@@ -7,7 +7,7 @@
 <body>
     <nav>
         {% if user.is_authenticated %}
-            <a href="#">Dashboard</a> |
+            <a href="{% url 'dashboard' %}">Dashboard</a> |
             <a href="{% url 'logout' %}">Logout</a>
         {% else %}
             <a href="{% url 'login' %}">Login</a> |
