--- a/main/static/css/styles.css
+++ b/main/static/css/styles.css
@@ -7,3 +7,12 @@ body {
 
 
 }
+
+nav {
+    background-color: hsl(0, 36%, 88%);
+    padding: 10px;
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    font-size: medium;
+}
