--- a/main/templates/base.html
+++ b/main/templates/base.html
@@ -14,6 +14,7 @@
 <body>
     <nav>
         {% if user.is_authenticated %}
+        <a href="{% url 'course_list' %}">Course</a> |
             <a href="{% url 'dashboard' %}">Dashboard</a> |
             <a href="{% url 'logout' %}">Logout</a>
         {% else %}
