--- a/main/templates/base.html
+++ b/main/templates/base.html
@@ -13,7 +13,7 @@
 <body>
     <header>
         <div class="container nav-container">
-            <h1 class="logo"><a href="{% url 'home' %}">MyShop</a></h1>
+            <h1 class="logo"><a href="{% url 'blog_list' %}">Cat Shop</a></h1>
             <nav>
                 <ul>
                     {% if user.is_authenticated %}
@@ -23,7 +23,7 @@
                     {% else %}
                         <li><a href="{% url 'login' %}">Login</a></li>
                         <li><a href="{% url 'register' %}">Register</a></li>
-                        <li><a href="{% url 'home' %}">Home</a></li>
+                       
                     {% endif %}
                 </ul>
             </nav>
