--- a/main/templates/login.html
+++ b/main/templates/login.html
@@ -1,11 +1,21 @@
 {% extends 'base.html' %}
 {% block title %}Login{% endblock %}
 {% block content %}
-<h2>Login</h2>
-<form method="post">
-    {% csrf_token %}
-    <input type="text" name="username" placeholder="Username" required><br>
-    <input type="password" name="password" placeholder="Password" required><br>
-    <button type="submit">Login</button>
-</form>
+<div class="auth-form-container">
+    <h2>Login to Your Account</h2>
+    <form method="post" class="auth-form">
+        {% csrf_token %}
+        <div class="form-group">
+            <input type="text" name="username" placeholder="Username" required>
+        </div>
+        <div class="form-group">
+            <input type="password" name="password" placeholder="Password" required>
+        </div>
+        <button type="submit" class="btn">Login</button>
+    </form>
+    <p class="form-footer">
+        Don't have an account? <a href="{% url 'register' %}">Register here</a>.
+    </p>
+</div>
 {% endblock %}
+
