--- a/main/templates/register.html
+++ b/main/templates/register.html
@@ -1,11 +1,21 @@
 {% extends 'base.html' %}
 {% block title %}Register{% endblock %}
 {% block content %}
-<h2>Register</h2>
-<form method="post">
-    {% csrf_token %}
-    <input type="text" name="username" placeholder="Username" required><br>
-    <input type="password" name="password" placeholder="Password" required><br>
-    <button type="submit">Register</button>
-</form>
+<div class="auth-form-container">
+    <h2>Create Your Account</h2>
+    <form method="post" class="auth-form">
+        {% csrf_token %}
+        <div class="form-group">
+            <input type="text" name="username" placeholder="Username" required>
+        </div>
+        <div class="form-group">
+            <input type="password" name="password" placeholder="Password" required>
+        </div>
+        <button type="submit" class="btn">Register</button>
+    </form>
+    <p class="form-footer">
+        Already have an account? <a href="{% url 'login' %}">Login here</a>.
+    </p>
+</div>
 {% endblock %}
+
